# Learning-Rust

./: Cargo.toml
1-hello-world/: getting-started.md  main.rs
2-guessing-game/guessing_game/src/: main.rs
3-common-concepts/compound-types/src/: main.rs
3-common-concepts/control-flow/src/: main.rs
3-common-concepts/data-types/src/: main.rs
3-common-concepts/functions/src/: main.rs
3-common-concepts/variables/src/: main.rs
4-ownership/: Ownership.md
4-ownership/functions_ownership/: Cargo.toml
4-ownership/functions_ownership/src/: main.rs
4-ownership/ownership/src/: main.rs
4-ownership/slices/src/: main.rs
5-structs/structs/src/: main.rs
6-enum-pattern-matching/enums/src/: main.rs
6-enum-pattern-matching/option-enum/src/: main.rs
6-enum-pattern-matching/pattern-matching/src/: main.rs
7-module-system/: Modules.md
7-module-system/restaurant/src/: lib.rs
7-module-system/restaurant/src/front_of_house/: hosting.rs
8-common-collections/hashmaps/src/: main.rs
8-common-collections/strings/: Cargo.toml
8-common-collections/strings/src/: main.rs
8-common-collections/vectors/src/: main.rs
9-error-handling/errors/src/: main.rs
